k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopsphere
  labels:
    app: shopsphere
    managed-by: kubectl
